Made validation send the request in the body instead of the parameters. This doesn't fix our special character issue, although it does sanitise the input. #fix